modificado el color

--- a/tareanueva.css
+++ b/tareanueva.css
@@ -21,7 +21,7 @@ body {
     top: 20px;
     left: 50%;
     transform: translateX(-50%);
-    color: #0ddee5;
+    color: #68e5e9;
     z-index: 2;
 }
 
